@@ -67,6 +67,7 @@ import org.apache.tika.parser.ParseContext;
 import org.apache.tika.parser.Parser;
 import org.apache.tika.parser.ParserDecorator;
 import org.apache.tika.parser.PasswordProvider;
+import org.apache.tika.parser.html.BoilerpipeContentHandler;
 import org.apache.tika.parser.html.HtmlParser;
 import org.apache.tika.parser.ocr.TesseractOCRConfig;
 import org.apache.tika.parser.pdf.PDFParserConfig;
@@ -338,6 +339,48 @@ public class TikaResource {
     public StreamingOutput getTextFromMultipart(Attachment att, @Context final UriInfo info) {
         return produceText(att.getObject(InputStream.class), att.getHeaders(), info);
     }
+
+    //this is equivalent to text-main in tika-app
+    @PUT
+    @Consumes("*/*")
+    @Produces("text/plain")
+    @Path("main")
+    public StreamingOutput getTextMain(final InputStream is, @Context HttpHeaders httpHeaders, @Context final UriInfo info) {
+        return produceTextMain(is, httpHeaders.getRequestHeaders(), info);
+    }
+
+    //this is equivalent to text-main (Boilerpipe handler) in tika-app
+    @PUT
+    @Consumes("multipart/form-data")
+    @Produces("text/plain")
+    @Path("form/main")
+    public StreamingOutput getTextMainFromMultipart(final Attachment att, @Context final UriInfo info) {
+        return produceTextMain(att.getObject(InputStream.class), att.getHeaders(), info);
+    }
+
+    public StreamingOutput produceTextMain(final InputStream is, @Context MultivaluedMap<String, String> httpHeaders, @Context final UriInfo info) {
+        final Parser parser = createParser();
+        final Metadata metadata = new Metadata();
+        final ParseContext context = new ParseContext();
+
+        fillMetadata(parser, metadata, context, httpHeaders);
+        fillParseContext(context, httpHeaders, parser);
+
+        logRequest(LOG, info, metadata);
+
+        return new StreamingOutput() {
+            public void write(OutputStream outputStream) throws IOException, WebApplicationException {
+                Writer writer = new OutputStreamWriter(outputStream, UTF_8);
+
+                ContentHandler handler = new BoilerpipeContentHandler(writer);
+
+                try (InputStream inputStream = is) {
+                    parse(parser, LOG, info.getPath(), inputStream, handler, metadata, context);
+                }
+            }
+        };
+    }
+
 
     @PUT
     @Consumes("*/*")
