@@ -1,0 +1,28 @@
+<!--
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
+<html>
+	<head>
+        <title>Title : Test Indexation Html</title>
+        <meta name="Author" content="Tika Developers">
+        <meta name="ICBM" content="51.2312, -5.1987">
+        <meta http-equiv="refresh" content="5">
+    </head>
+	<body>
+		<h1><a name="test-anchor"></a>Test Indexation Html</h1>
+		<p><a href="http://www.apache.org/">Indexation</a> du fichier</p>
+	</body>
+</html>
